projects/vb6parse/snapshots/tests/library/type_checking/isnull/isnull_property_assignment.snap
---
source: projects/vb6parse/tests/library/type_checking/isnull.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: MemberAccessExpression
                  children:
                    - kind: Identifier
                      text: obj
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: IsNullValue
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: IsNull
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: obj
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Data
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
